# data-hackathons

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  gunicorn.conf.py  pyproject.toml
app/: app.py  constants.py  main.py  settings.py
app/models/: competiton.py  evaluation.py  leaderboard.py  participant.py  submission.py
app/repositories/: azure_storage.py  common.py  in_memory.py
app/routes/: api.py  common.py  paths.py  website.py
app/security/: azure_webapp_header.py  common.py  protocol.py
app/templates/: base.html  competition.html  competitions.html  home.html
app/utils/: parse_csv.py  repositories.py  scoring.py  text.py
scripts/: run_local.py  send_sample_data.py
tests/: conftest.py  test_api.py  test_repository.py  test_setting_up.py  test_user_journey.py
tests/data/: sample_target.csv
tests/models/: test_competition.py
